# FastMatch

./: .env  .gitignore  docker-compose.yml
backend/: .gitignore  README_TESTING.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 14f47aa49fa6_create_resumes_tables.py  1540831cc7b9_create_resume_versions_tables.py  9fcd59c326c6_add_cover_letter_to_resume_versions.py
backend/app/: main.py
backend/app/core/: config.py  database.py  debugger.py  logger.py  logging.py
backend/app/features/: README.md
backend/app/features/resumes/: models.py  router.py  schemas.py  service.py
backend/app/features/resumes/ingestion/: service.py
backend/app/features/resumes/parsing/: service.py  utils.py
backend/app/features/resumes/persistence/: models.py  repository.py
backend/app/integrations/: README.md
backend/app/integrations/file_extractors/: __init__.py  client.py  exceptions.py  models.py  utils.py
backend/app/integrations/llm/: __init__.py  base.py  client.py  exceptions.py  factory.py  gemini_client.py  models.py  openai_client.py  utils.py
backend/app/modules/file_extractors/: __init__.py  exceptions.py
backend/app/modules/file_extractors/core/: __init__.py  base.py  docx_extractor.py  factory.py  pdf_extractor.py
backend/app/modules/resumes/: domain.py  router.py  schemas.py  service.py  storage.py
backend/scripts/: test.sh
backend/tests/: README.md  conftest.py  test_file_extractor_client.py  test_ingestion_service.py  test_llm_client.py  test_parsing_service.py  test_resume_service.py
(+6 files in other folders)
